--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -27,6 +27,8 @@
   --spacing-xl: 3rem;
   --spacing-2xl: 4rem;
   --spacing-3xl: 6rem;
+  --spacing-4xl: 8rem;
+  --spacing-5xl: 10rem;
   
   /* Border Radius */
   --radius-sm: 8px;
