--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -192,10 +192,18 @@
 
   .mobileMenuBtn {
     display: flex;
+    min-width: 44px;
+    min-height: 44px;
+    align-items: center;
+    justify-content: center;
   }
 
   .mobileMenu {
     display: block;
+  }
+
+  .mobileNavItem {
+    min-height: 44px;
   }
 }
 
